<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.csc4360_project.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.csc4360_project.ui.dashboard.DashboardFragment"
        android:label="@string/title_fitness"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.csc4360_project.ui.notifications.NotificationsFragment"
        android:label="@string/title_medicine"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_bills"
        android:name="com.example.csc4360_project.ui.bills.BillFragment"
        android:label="@string/title_bills"
        tools:layout="@layout/bill_fragment" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.csc4360_project.ui.shopping.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/shopping_fragment" />
</navigation>